# kapa-stacker

./: .gitignore  CLAUDE.md  README.md  extract_pr.py  plan_executor.py  pyproject.toml  requirements.txt  stacked_pr_analyzer.py  test_analyzer.py
core/: Cargo.toml
core/src/: main.rs
core/src/application/: analyze.rs  indexer.rs
core/src/db/: queries.rs
core/src/domain/: entities.rs
core/src/iface/: cli.rs  handler.rs  server.rs
core/src/index/: mod.rs
core/src/infrastructure/: complexity.rs  imports.rs  lsp.rs  mod.rs  tree_sitter.rs  walker.rs
core/src/server/: handler.rs
docs/: benchmark-rename-refactoring.md  plan-claude-code-skill-integration.md  session-summary.md
src/application/: analyze_branch.py  generate_plan.py
src/domain/port/: definition_resolver.py  text_generator.py
src/domain/service/: graph_queries.py
src/infrastructure/: setup.py
src/infrastructure/indexer/: call_cache.py  cochange_cache.py  complexity_cache.py  ctags_indexer.py  graph_builder.py  import_cache.py  incremental_indexer.py  index_all.py  index_store.py
src/infrastructure/llm/: llm_text_generator.py  rule_based_generator.py
src/infrastructure/parsers/: regex_parsers.py
src/interface/cli/: cli.py
src/interface/daemon/: client.py  handlers.py  protocol.py  (+2 more)
src/presentation/: cli.py
tests/infrastructure/: test_import_dispatcher.py  test_incremental_indexer.py  test_language_detector.py  test_llm_backend.py  test_python_ast_parser.py  test_regex_parsers.py  test_text_generators.py
tests/interface/: test_daemon.py  test_protocol.py  test_query_router.py
(+2 files in other folders)
