[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kapa-cortex"
version = "0.1.0"
description = "Local code intelligence engine — stacked PRs, repo analysis, dependency graphs"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
ai = ["llama-cpp-python>=0.2.0"]
full = [
    "tree-sitter-languages>=1.10.0",
    "lizard>=1.17.0",
    "llama-cpp-python>=0.2.0",
]

[project.scripts]
kapa-cortex = "src.interface.cli.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.interface.skill" = ["*.md", "references/*.md", "scripts/*.sh"]
